style/style.css
* {
    margin: 0;
    padding: 0;
    -webkit-appearance: none;
}

@font-face {
    font-family: 'Cabin';
    src: url('../resources/fonts/Cabin-VariableFont_wdth\,wght.ttf') format("truetype-variations");
    font-weight:1 999;
}

@font-face {
    font-family: 'EB Garamond ';
    src: url('../resources/fonts/EBGaramond-VariableFont_wght.ttf');
    font-weight: 1 999;
}

:root {
    --primary-color: #1C2B4C;
    --secondary-color: #4c3564;
    --accent-color: #ffa8b8;
    --light-color: rgba(255, 255, 255, 0.82);
    --dark-color: rgba(0, 0, 0, 0.82);
    color: var(--light-color);
    font-family: 'Cabin', sans-serif;
}

html {
    scroll-behavior: smooth;
    scrollbar-width: thin;
}

::-webkit-scrollbar {
    width: .5em;
}
::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
}
::-webkit-scrollbar-thumb {
  background-color: rgba(255, 255, 255, .1);
}

body {
    background-color: var(--primary-color);
    overflow-x: hidden;
}

h1 {
    font-family: 'EB Garamond', serif;
}

nav {
    position: sticky;
    top: 0;
    z-index: 999;
    padding: 20px 10px 20px 10px;
    text-align: center;
    font-size: 1rem;
    background-color: rgba(11, 17, 30, 0.7);
    transition: all .3s ease;
    
}

nav a {
    padding: 0 10px 0 10px;
    display: inline-block;
    color: var(--light-color);
    text-decoration: none;
    font-weight: 200;
    transition: all .3s ease;
    font-variation-settings: 'wdth' 75, 'wght' 400;
}

nav a:hover {
    color: var(--accent-color);
    font-weight: 900;
}

section {
    padding: 10px 20px 20px 20px;
    min-height: calc(100vh - 30px);
    position: relative;
}

h2 {
    margin: 1em 0 .5em 0;
    font-size: 3rem;
    font-family: 'EB Garamond', serif;
    font-weight: 900;
}

p {
    margin: 2px 0 5px 0;
    font-size: 1.25rem;
    line-height: 1.75rem;
}


@media only screen and (min-width: 768px) {
    nav {
        padding: 20px;
        margin: auto;
        top: 30px;
        width: max-content;
        font-size: 1.25rem;
        backdrop-filter: blur(5px);
        border-radius: 50px;
    }
    nav a {
        margin: 0 20px 0 20px;
    }
    section {
        padding-top: 80px;
        min-height: calc(100vh - 64px - 40px);
    }
}

